file(GLOB ProtoFiles "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")
PROTOBUF_GENERATE_CPP(ProtoSources ProtoHeaders ${ProtoFiles})
add_library(STC_Msg STATIC ${ProtoSources} ${ProtoHeaders})
target_link_libraries(STC_Msg ${Boost_LIBRARIES} ${PROTOBUF_LIBRARY})
target_include_directories(STC_Msg PUBLIC ${CMAKE_CURRENT_BINARY_DIR})